# Linear-Regression

./: .gitignore  CMakeLists.txt  File.c  File.h  LinearRegression.c  LinearRegression.h  Main.c  Parser.c  Parser.h
StringHandling/: CMakeLists.txt  StringHandling.c
StringHandling/Include/: StringHandling.h
